--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-.body {
-    background-color: #000000;    
-}
-
-.money {
-    size: 60px;
-    color: red;
+body {
+    background-color: aqua;
 }
